2010-09-15  Ingo Renner  <ingo.renner@dkd.de>

	* Changed version number to 1.2.0-preview
	* Changed directory for TYPO3 Solr plugins in solrconfig.xml

2010-09-15  Markus Goldbach  <markus.goldbach@dkd.de>

	* Changed install script to install the Solr Access Filter Plugin
	* Added Solr Access Filter Plugin to libs in solrconfig.xml
	* Changed path to libs in solrconfig.xml
	* Changed install script exclude Solr Access Filter Plugin Version number to variable

2010-09-14  Ingo Renner  <ingo.renner@dkd.de>

	* Added a method to call arbitrary servlets to tx_solr_SolrService
	* Changed the link viewhelper to handle the target argument in different ways
	* Added "alpha" and "lex" as aliases for "index" to the facet sorting option
	* Added support for conditions in templates
	* Changed tx_solr_Template to tolerate if viewhelpers could not be loaded
	* Added support for named loops in tx_solr_Template
	* Added support for conditions in loops
	* Changed tx_solr_Template to accept markers in whatver notation
	* Added tx_solr_Util::lcfirst()
	* Added tx_solr_Util::getSolrConfigurationFromPageId() and tx_solr_Util::initializeTsfe()
	* Added base classes for plugins
	* Removed the backend module for now, didn't do anything anyways
	* Changed the default template to show more features by default
	* Changed the default highlighting wrap to use a CSS class instead of a style attribute
	* Added EXT:crawler support
	* Added an option to enable query debug mode
	* Added an option to set allowEmptyQuery via TypoScript
	* Changed the results plugin by refactoring to use the tx_solr_pluginbase_CommandPluginBase class, credits Timo Schmidt
	* Added new interfaces to extend the functionality of EXT:solr
	* Changed the form command: added new markers, enforced implementation of form modifier interface
	* Changed the sorting command to only execute when activated through TypoScript
	* Changed the results command: added new markers, added new hooks