@@ -3,7 +3,7 @@
 TOMCAT_VER=6.0.29
 SOLR_VER=1.4.1
 EXT_SOLR_VER=1.2
-EXT_SOLR_AFP_VER=1.0.0
+EXT_SOLR_AFP_VER=1.1.0
 
 SVNBRANCH_PATH="branches/$EXT_SOLR_VER"
 
@@ -118,9 +118,9 @@ mkdir solr/typo3
 cd solr/typo3
 if [ $BRANCH_TEST_RETURN -eq "0" ]
 then
-	wget --no-check-certificate https://svn.typo3.org/TYPO3v4/Extensions/solr/$SVNBRANCH_PATH/resources/solr/typo3-accessfilter-$EXT_SOLR_AFP_VER.jar
+	wget --no-check-certificate https://svn.typo3.org/TYPO3v4/Extensions/solr/$SVNBRANCH_PATH/resources/solr/plugins/typo3-accessfilter-$EXT_SOLR_AFP_VER.jar
 else
-	wget --no-check-certificate https://svn.typo3.org/TYPO3v4/Extensions/solr/trunk/resources/solr/typo3-accessfilter-$EXT_SOLR_AFP_VER.jar
+	wget --no-check-certificate https://svn.typo3.org/TYPO3v4/Extensions/solr/trunk/resources/solr/plugins/typo3-accessfilter-$EXT_SOLR_AFP_VER.jar
 fi
 
 cd /opt/solr-tomcat/
