@@ -1,3 +1,9 @@
+2010-09-29  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Moved the Access Filter Plugin from resources/solr/ to resources/solr/plugins/
+	* Updated Access Filter Plugin to version 1.1.0, brings extended access check support
+	* Changed the install Solr script to get the access filter from the new location
+
 2010-09-15  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Changed version number to 1.2.0-preview
